LeasedLineTools/src/objects/Leased_Line_Quote_Request__c.object
<CustomObject>
    <fields>
        <fullName>Bandwidth__c</fullName>
        <label>Bandwidth</label>
        <picklist>
            <picklistValues>
                <fullName>2MB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4MB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6MB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8MB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10MB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>20MB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>30MB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>40MB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>50MB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>60MB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>70MB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>80MB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>90MB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>100MB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>200MB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>300MB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>400MB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>500MB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>600MB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>700MB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>800MB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>900MB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1GB</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Bearer__c</fullName>
        <label>Bearer</label>
        <picklist>
            <picklistValues>
                <fullName>10MB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>100MB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1GB</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Contract_Term__c</fullName>
        <label>Contract Term</label>
        <picklist>
            <picklistValues>
                <fullName>1 Year</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2 Years</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3 Years</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4 Years</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5 Years</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>County__c</fullName>
        <label>County</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Diverse_Circuit__c</fullName>
        <label>Diverse Circuit</label>
        <picklist>
            <picklistValues>
                <fullName>RAO1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RAO2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RAO2 Plus</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Etherflow_Bandwidth__c</fullName>
        <label>Etherflow Bandwidth</label>
        <picklist>
            <picklistValues>
                <fullName>Standard</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Premium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Default CoS (Standard)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Multi Cos 5% (Premium)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Multi Cos 10% (Premium)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Multi Cos 25% (Premium)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Multi Cos 50% (Premium)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Multi Cos 100% (Premium)</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Opportunity_ID__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity ID</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Leased Line Quote Requests</relationshipLabel>
        <relationshipName>Leased_Line_Quote_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Point_2_Point__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Point 2 Point</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Postcode__c</fullName>
        <label>Postcode</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Option__c</fullName>
        <label>Product Option</label>
        <picklist>
            <picklistValues>
                <fullName>GEA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EFM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ethernet</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>All</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Site_A_Postcode_BT__c</fullName>
        <label>Site A Postcode BT</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Site_A_Postcode_Virgin__c</fullName>
        <label>Site A Postcode Virgin</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Site_Reference__c</fullName>
        <label>Site Reference</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Street__c</fullName>
        <label>Street</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TOID__c</fullName>
        <label>TOID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Town__c</fullName>
        <label>Town</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>xml__c</fullName>
        <label>xml</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <label>Leased Line Quote Request</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Site Ref</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Leased Line Quote Requests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>